# openapi.yaml
@@ -20,7 +20,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserCreateDto'
         required: true
       responses:
         '201':
@@ -28,7 +28,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserCreateDto'
         '400':
           $ref: '#/components/responses/InvalidRequest'
         '4XX':
@@ -136,9 +136,22 @@ components:
           type: string
           format: username
           description: The user's username.
+      additionalProperties: false
+    UserCreateDto:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          description: The user's email.
+        username:
+          type: string
+          format: username
+          description: The user's username.
       required:
         - email
         - username
+      additionalProperties: false
     userId:
       type: string
       format: uuid
