# src/Controller/UserController.php
@@ -5,9 +5,11 @@ declare(strict_types = 1);
 namespace App\Controller;
 
 use App\Dto\CreateUserDto;
+use App\Exceptions\UserNotFound;
 use App\Repository\UserRepository;
 use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
+use stdClass;
 
 class UserController {
 	public function __construct(
@@ -17,12 +19,12 @@ class UserController {
 
 	public function createUser(ServerRequestInterface $request, ResponseInterface $response): ResponseInterface {
 		$body = (string) $request->getBody();
-		/** @var array{username: string, email: string} $data */
+		/** @var stdClass $data */
 		$data = \json_decode($body, flags: \JSON_THROW_ON_ERROR);
-		$userDto = new CreateUserDto($data['username'], $data['email']);
+		$userDto = new CreateUserDto($data->username, $data->email);
 		$this->userRepository->createUser($userDto);
 
-		$response->getBody()->write(\json_encode($data, \JSON_THROW_ON_ERROR));
+		$response->getBody()->write(\json_encode($userDto, \JSON_THROW_ON_ERROR));
 		$response = $response->withHeader('Content-Type', 'application/json');
 		return $response->withStatus(201);
 	}
@@ -37,7 +39,12 @@ class UserController {
 		array $parameters
 	): ResponseInterface {
 		$userId = $parameters['userId'];
-		$data = $this->userRepository->findByUserId($userId);
+		$data = $this->userRepository->findUserById($userId);
+
+		if ($data === null) {
+			throw UserNotFound::create();
+		}
+
 		$response->getBody()->write(\json_encode($data, \JSON_THROW_ON_ERROR));
 		$response = $response->withHeader('Content-Type', 'application/json');
 		return $response;
